syntax = "proto3";
package main;
option go_package="./smspb";

service SMSServiceApi{
    rpc send(SendSMSRequest) returns (SendSMSResponse){}
    rpc getOne(GetSMSRequest) returns (GetSMSResponse){}
    rpc getAll(GetAllSMSRequest) returns ( stream GetAllSMSResponse){}
}


message SendSMSRequest{
    string senderPhone = 1;
    string receiverPhone = 2;
    string textSubject = 3;
    string textBody = 4;
}
message SendSMSResponse{
    string message = 1;
}

message GetSMSRequest{
    string id = 1;
}
message GetSMSResponse{
    string senderPhone = 1;
    string receiverPhone = 2;
    string textSubject = 3;
    string textBody = 4;
}

message GetAllSMSRequest{
    string message = 1;
}

message GetAllSMSResponse{
    string senderPhone = 1;
    string receiverPhone = 2;
    string textSubject = 3;
    string textBody = 4;
}